[package]
name = "draco"
version = "0.1.1"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2018"
description = "Draco is a Rust library for building client side web applications with Web Assembly."
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.1.25"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
rustc-hash = "1.0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Location",
    "MouseEvent",
    "Node",
    "NodeList",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Text",
    "Window",
]

[dev-dependencies]
rand = "0.5"

[profile.release]
lto = true
