[package]
name = "draco"
version = "0.1.2"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2018"
description = "Draco is a Rust library for building client side web applications with Web Assembly."
license = "MIT/Apache-2.0"
repository = "https://github.com/utkarshkukreti/draco"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
fxhash = "0.2.1"
derivative = "1.0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CharacterData",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Location",
    "MouseEvent",
    "Node",
    "NodeList",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Text",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.2"

[profile.release]
lto = true

[workspace]
members = [
  "examples/counter",
  "examples/counters",
  "examples/form",
  "examples/github_commits",
  "examples/hello_world",
  "examples/jfb",
  "examples/local_storage",
  "examples/mouse_tracker",
  "examples/ref_focus",
  "examples/router",
  "examples/router_basic",
  "examples/svg_clock",
]
