[package]
name = "counters"
version = "0.1.0"
edition = "2018"
description = "Draco Example :: counters"
repository = "https://github.com/utkarshkukreti/draco"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
draco = { path = "../.." }

js-sys = "0.3"
rand = "0.5"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window"
]
